# Bell-LaPadula_model

./: LICENSE  README.md  pyproject.toml
source/: __init__.py
