[tool.poetry]
name = "bell-lapadula-model"
version = "0.1.0"
description = "A flask app for practice this model"
authors = ["francodalladg"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.6"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
